--- a/layouts/index.html
+++ b/layouts/index.html
@@ -61,11 +61,11 @@
         <div class="inner">
             <h1>Completely Transparent.</h1>
             <h2>
-                We believe that transparency and openness is the best
+                We believe that transparency and openness are the best
                 foundation for trust so we are building Padlock completely out
                 in the open. Our source code is developed under an open source
-                licence so any one can review it, provide feedback and even
-                offer contrubitions at any time!
+                licence so anyone can review it, provide feedback and even
+                offer contributions at any time!
             </h2>
             <a href="{{ .Param "githubUrl" }}">Find Padlock On Github &raquo;</a>
         </div>
