When clicking download link, guess platform and start download directly, then redirect to downloads page

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,7 +8,7 @@
     </ul>
 </section>
 <section>
-    {{ partial "download-button" . }}
+    {{ partial "download-button" (dict "ref" "article-list") }}
 </section>
 <section>
     {{ partial "newsletter-signup" . }}
