--- a/layouts/partials/download-button.html
+++ b/layouts/partials/download-button.html
@@ -1,4 +1,4 @@
-<a href="/downloads/" class="btn download-button">
+<a href="/downloads/" class="btn download-button download-link" data-ref="{{ .ref }}">
     <span>Get The App</span>
     <span class="icon icon-windows"></span>
     <span class="icon icon-apple"></span>
