--- a/layouts/partials/download-links.html
+++ b/layouts/partials/download-links.html
@@ -1,17 +1,17 @@
 <div>
-    <a href="{{ $.Param "iosUrl" }}" class="download-button get-app" data-platform="ios" target="_blank">
+    <a href="{{ $.Param "iosUrl" }}" class="download-link-direct" data-platform="ios" target="_blank">
         <div class="inner">
             <div class="icon icon-apple"></div>
             <div>iOS App Store</div>
         </div>
     </a>
-    <a href="{{ $.Param "androidUrl" }}" class="download-button get-app" data-platform="android" target="_blank">
+    <a href="{{ $.Param "androidUrl" }}" class="download-link-direct" data-platform="android" target="_blank">
         <div class="inner">
             <div class="icon icon-android"></div>
             <div>Google Play</div>
         </div>
     </a>
-    <a href="{{ $.Param "chromeUrl" }}" class="download-button get-app" data-platform="chrome" target="_blank">
+    <a href="{{ $.Param "chromeUrl" }}" class="download-link-direct" data-platform="chrome" target="_blank">
         <div class="inner">
             <div class="icon icon-chrome"></div>
             <div>Chrome Store</div>
@@ -19,19 +19,19 @@
     </a>
 </div>
 <div>
-    <a href="{{ $.Param "winUrl" }}" class="download-button get-app" data-platform="windows">
+    <a href="{{ $.Param "winUrl" }}" class="download-link-direct" data-platform="windows">
         <div class="inner">
             <div class="icon icon-windows"></div>
             <div>Windows</div>
         </div>
     </a>
-    <a href="{{ $.Param "macUrl" }}" class="download-button get-app" data-platform="mac">
+    <a href="{{ $.Param "macUrl" }}" class="download-link-direct" data-platform="mac">
         <div class="inner">
             <div class="icon icon-apple"></div>
             <div>macOS</div>
         </div>
     </a>
-    <a href="{{ $.Param "linuxUrl" }}" class="download-button get-app" data-platform="linux">
+    <a href="{{ $.Param "linuxUrl" }}" class="download-link-direct" data-platform="linux">
         <div class="inner">
             <div class="icon icon-linux"></div>
             <div>Linux</div>
