Track all GitHub links

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -67,7 +67,7 @@
                 licence so anyone can review it, provide feedback and even
                 offer contributions at any time!
             </h2>
-            <a href="{{ .Param "githubUrl" }}">Find Padlock On Github &raquo;</a>
+            <a href="{{ .Param "githubUrl" }}" class="padlock-github">Find Padlock On Github &raquo;</a>
         </div>
     </section>
 
