--- a/static/css/base.css
+++ b/static/css/base.css
@@ -174,6 +174,10 @@ article {
     clear: both;
 }
 
+article p {
+    text-align: justify;
+}
+
 article .publish-date {
     color: #aaa;
 }
@@ -198,7 +202,7 @@ main {
 }
 
 header .inner, main {
-    max-width: 900px;
+    max-width: 700px;
 }
 
 figure {
