Add product hunt promo banner

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -82,6 +82,124 @@
         </div>
     </section>
 
+    <div class="ph-promo-wrapper">
+        <div class="ph-promo">
+            <div class="ph-promo-header">
+                <img src="/img/product-hunt.png">
+                <div class="ph-promo-text">
+                    <strong>Greetings, Product Hunter.</strong> We have a special offer for you! Sign up now and get
+                    the first <strong>6 months</strong> of <strong>Padlock Pro</strong> for <strong>free</strong>!
+                </div>
+                <div class="ph-promo-close-button">x</div>
+            </div>
+            <form action="https://cloud.padlock.io/login/" method="post" class="promo-form" target="_blank">
+                <input name="type" type="hidden" value="web" required>
+                <input name="api_version" type="hidden" value="1" required>
+                <input name="redirect" type="hidden" value="/dashboard/?coupon=ph-promo&ref=product-hunt">
+                <input name="email" type="email" required placeholder="Enter Email Address">
+                <button>Sign Up</button>
+            </form>
+        </div>
+    </div>
+
+    <style>
+        .ph-promo-wrapper {
+            padding: 15px;
+            box-sizing: border-box;
+            width: 100%;
+            max-width: 500px;
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            z-index: 1;
+            display: none;
+        }
+
+        .ph-promo {
+            border-radius: 8px;
+            background: linear-gradient(180deg, #f49300 0%, #f25b00 100%);
+            text-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
+            box-shadow: rgba(0, 0, 0, 0.25) 0 0 5px;
+            color: white;
+            position: relative;
+        }
+
+        .ph-promo-close-button {
+            display: block;
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 30px;
+            height: 30px;
+            line-height: 25px;
+            text-align: center;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .ph-promo-header {
+            display: flex;
+            align-items: center;
+            padding: 15px;
+        }
+
+        .ph-promo-header img {
+            width: 50px;
+            height: 50px;
+            margin-right: 15px;
+        }
+
+        .ph-promo-text {
+            flex: 1;
+        }
+
+        .promo-form {
+            display: flex;
+            background: rgba(0, 0, 0, 0.05);
+        }
+
+        .promo-form input[name="email"] {
+            flex: 1;
+        }
+
+        .promo-form input,
+        .promo-form button{
+            background: none;
+            border: none;
+            font-size: inherit;
+            font-family: inherit;
+            text-shadow: inherit;
+            color: inherit;
+            padding: 15px;
+        }
+
+        ::placeholder,
+        /* ::-moz-placeholder, */
+        /* :-ms-input-placeholder, */
+        ::-webkit-input-placeholder {
+            color: inherit;
+            text-shadow: inherit;
+            opacity: 0.5;
+        }
+    </style>
+
+    <script>
+        (function() {
+            var phPromoWrapper = document.querySelector(".ph-promo-wrapper");
+            var phCloseButton = document.querySelector(".ph-promo-close-button");
+            if (
+                window.location.search.indexOf("product-hunt") !== -1 ||
+                window.location.search.indexOf("producthunt") !== -1 ||
+                document.referrer.indexOf("producthunt.com") !== -1
+            ) {
+                phPromoWrapper.style.display = "block";
+            }
+            phCloseButton.addEventListener("click", function() {
+                phPromoWrapper.style.display = "none";
+            });
+        })();
+    </script>
+
 {{ end }}
 
 {{ define "float" }}
