Update privacy policy

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,6 +6,7 @@
             <li><a href="/howto/">Howto</a></li>
             <li><a href="/downloads/">Downloads</a></li>
             <li><a href="mailto:contact@padlock.io">Contact</a></li>
+            <li><a href="/privacy/">Privacy</a></li>
             <li><a href="{{ .Param "githubUrl" }}" class="padlock-github">Source</a></li>
         </ul>
     </nav>
