Add newsletter signup form to top of list page as well as bottom

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,6 +1,11 @@
 {{ define "main" }}
 <section>
     <h1>{{ .Title }}</h1>
+</section>
+<section>
+    {{ partial "newsletter-signup" . }}
+</section>
+<section>
     <ul class="articles">
         {{ range .Data.Pages }}
             {{ .Render "li" }}
