First pass at updating for v3: - replace videos with up-to-date screenshots - update font - add "better together" section

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -71,6 +71,19 @@
         </div>
     </section>
 
+    <section class="together">
+        <div class="inner">
+            <h1>Better Together.</h1>
+            <h2>
+                Want to share your passwords and documents with your family or team members?
+                No problem! Padlocs powerful organizations feature allows you to share and
+                manage your sensitive data within your Family, Business or any other kind of
+                Organization.
+            </h2>
+            <a href="{{ .Param "githubUrl" }}" class="padlock-github">Check Out Plans &raquo;</a>
+        </div>
+    </section>
+
     <section class="tryit">
         <div class="inner">
             <h1>Go Ahead, Try It!</h1>
