--- a/layouts/partials/device.html
+++ b/layouts/partials/device.html
@@ -11,8 +11,8 @@
                     <div></div>
                 </div>
                 <div class="screen">
-                    <video playsinline muted preload src="/img/v2.1-unlock.mp4"></video>
-                    <video playsinline muted preload src="/img/v2.1-open-record.mp4" class="hidden"></video>
+                    <img src="/img/screenshots/list-mobile.png" />
+                    <img src="/img/screenshots/item-mobile.png" />
                     <div class="code hidden">
                         <div class="code-scan">
                             <div></div>
@@ -33,10 +33,8 @@
                     <div></div>
                 </div>
                 <div class="screen">
-                    <video playsinline muted preload src="/img/v2.1-sync-desktop.mp4"></video>
-                    <div class="downloads hidden">
-                        {{ partial "download-links" . }}
-                    </div>
+                    <img src="/img/screenshots/list-desktop.png" />
+                    <img src="/img/screenshots/groups-desktop.png" />
                 </div>
             </div>
         </div>
