--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,293 +1,291 @@
-html, body {
-    overflow-x: hidden;
+html,
+body {
+  overflow-x: hidden;
 }
 
 header {
-    position: absolute;
-    background: transparent;
-    border: none;
-    text-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
+  position: absolute;
+  background: transparent;
+  border: none;
+  text-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
 }
 
-header, header a {
-    color: #fff;
+header,
+header a {
+  color: #fff;
 }
 
 header .inner {
-    max-width: none;
-    padding: 0 10px;
-    box-sizing: border-box;
+  max-width: none;
+  padding: 0 10px;
+  box-sizing: border-box;
 }
 
 header.header-background {
-    background: #23b4ff;
-    z-index: 0;
-    height: 50px;
+  background: #23b4ff;
+  z-index: 0;
+  height: 50px;
 }
 
 main {
-    max-width: none;
-    margin: 0;
-    padding: 0;
+  max-width: none;
+  margin: 0;
+  padding: 0;
 }
 
 section {
-    margin: 0;
-    padding: 0;
-    position: relative;
-    padding-top: 100px;
-    height: 350px;
-    perspective: 3000px;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  padding-top: 100px;
+  height: 350px;
+  perspective: 3000px;
 }
 
 section:nth-of-type(2n) {
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.05) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.05) 100%
+  );
 }
 
-section:nth-of-type(2n+1) {
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0) 100%);
+section:nth-of-type(2n + 1) {
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.05) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
 section .inner {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    position: relative;
-    height: 100%;
-    box-sizing: border-box;
-    width: 800px;
-    margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  position: relative;
+  height: 100%;
+  box-sizing: border-box;
+  width: 800px;
+  margin: 0 auto;
 }
 
 section h1 {
-    margin: 0 0 30px 0;
+  margin: 0 0 30px 0;
 }
 
 section h2 {
-    margin: 0 0 20px 0;
-    font-weight: 300;
+  margin: 0 0 20px 0;
+  font-weight: 300;
 }
 
 .device-stage {
-    transform: translate3d(0, 100px, 0);
+  transform: translate3d(0, 100px, 0);
 }
 
 .device-wrapper {
-    transform: translate3d(250px, -5px, 0) rotateY(-60deg) rotateX(20deg);
+  transform: translate3d(250px, -5px, 0) rotateY(-60deg) rotateX(20deg);
 }
 
-.device-stage:not(.hero):not(.simple):not(.portable):not(.transparent):not(.tryit) {
-    opacity: 0;
+.device-stage:not(.hero):not(.simple):not(.portable):not(.transparent):not(.together) {
+  opacity: 0;
 }
 
 .device.desktop {
-    transform: rotateY(180deg) translateY(-5000px);
-    transition: transform 0s linear 0.30s;
+  transform: rotateY(180deg) translateY(-5000px);
+  transition: transform 0s linear 0.3s;
 }
 
 .device.desktop > div {
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 /* HERO SECTION */
 
 section.hero {
-    position: relative;
-    padding-top: 0;
-    height: 700px;
-    background-color: #23b4ff;
-    background: linear-gradient(180deg, #59c6ff 0%, #077cb9 100%);
-    color: #fff;
-    overflow: hidden;
-    text-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
+  position: relative;
+  padding-top: 0;
+  height: 700px;
+  background-color: #23b4ff;
+  background: linear-gradient(180deg, #59c6ff 0%, #077cb9 100%);
+  color: #fff;
+  overflow: hidden;
+  text-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
 }
 
 section.hero .inner {
-    justify-content: center;
-}
-
-section.hero::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: url("/img/bg.svg");
-    background-size: 28px;
-    opacity: 0.05;
+  justify-content: center;
 }
 
 .hero a {
-    color: #fff;
+  color: #fff;
 }
 
 .hero .logo-icon {
-    font-size: 100%;
-    position: relative;
-    top: 5px;
+  font-size: 100%;
+  position: relative;
+  top: 5px;
 }
 
 .hero h1 {
-    margin-top: -20px;
+  margin-top: -20px;
 }
 
-.hero h1, .hero h2 {
-    font-weight: 400;
-    width: 460px;
+.hero h1,
+.hero h2 {
+  font-weight: 400;
+  width: 460px;
 }
 
 section.hero h2 {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .hero .description {
-    width: 450px;
-    margin-bottom: 40px;
-    font-size: 110%;
+  width: 450px;
+  margin-bottom: 40px;
+  font-size: 110%;
 }
 
 .hero .buttons > * {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
-.hero button, .hero .btn {
-    font-size: 110%;
-    box-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
+.hero button,
+.hero .btn {
+  font-size: 110%;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
 }
 
 .device-stage.hero .device-wrapper {
-    transform: translate3d(250px, 30px, 0) rotateY(-30deg) rotateX(20deg);
+  transform: translate3d(250px, 30px, 0) rotateY(-30deg) rotateX(20deg);
 }
 
 /* SIMPLE SECTION */
 
 section.simple .inner {
-    text-align: right;
-    align-items: flex-end;
+  text-align: right;
+  align-items: flex-end;
 }
 
 section.simple .inner > h2 {
-    width: 500px;
+  width: 500px;
 }
 
 .device-stage.simple {
-    transform: translate3d(0, 700px, 0);
+  transform: translate3d(0, 700px, 0);
 }
 
 .device-stage.simple .device-wrapper {
-    transform: translate3d(-250px, 50px, 0) rotateY(390deg) rotateX(20deg);
+  transform: translate3d(-250px, 50px, 0) rotateY(390deg) rotateX(20deg);
 }
 
 /* CROSS-PLATFORM SECTION */
 
 section.portable .inner {
-    text-align: left;
+  text-align: left;
 }
 
 section.portable .inner > h2 {
-    width: 420px;
+  width: 420px;
 }
 
 .device-stage.portable {
-    transform: translate3d(0, 1150px, 0);
+  transform: translate3d(0, 1150px, 0);
 }
 
 .device-stage.portable .device-wrapper {
-    transform: translate3d(270px, 60px, 0) rotateY(150deg) rotateX(-20deg);
+  transform: translate3d(270px, 60px, 0) rotateY(150deg) rotateX(-20deg);
 }
 
 .device-stage.portable .device.desktop {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .device-stage.portable .device > div {
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 /* TRANSPARENCY SECTION */
 
 section.transparent .inner {
-    text-align: right;
-    align-items: flex-end;
+  text-align: right;
+  align-items: flex-end;
 }
 
 section.transparent .inner > h2 {
-    width: 460px;
+  width: 460px;
 }
 
 .device-stage.transparent {
-    transform: translate3d(0, 1600px, 0);
+  transform: translate3d(0, 1600px, 0);
 }
 
 .device-stage.transparent .device-wrapper {
-    transform: translate3d(-250px, 40px, 0) rotateY(390deg) rotateX(20deg);
+  transform: translate3d(-250px, 40px, 0) rotateY(390deg) rotateX(20deg);
 }
 
 .device-stage.transparent .device > div {
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
-/* TRY IT SECTION */
+/* TOGETHER SECTION */
 
-section.tryit {
-    padding-bottom: 20px;
+section.together {
+  padding-bottom: 20px;
 }
 
-section.tryit .inner > h2 {
-    width: 350px;
+section.together .inner > h2 {
+  width: 350px;
 }
 
-.device-stage.tryit {
-    transform: translate3d(0, 2000px, 0);
+.device-stage.together {
+  transform: translate3d(0, 2050px, 0);
 }
 
-.device-stage.tryit .device-wrapper {
-    transform: translate3d(200px, 80px, 0) rotateY(150deg) rotateX(-20deg);
+.device-stage.together .device-wrapper {
+  transform: translate3d(200px, 80px, 0) rotateY(150deg) rotateX(-20deg);
 }
 
-.device-stage.tryit .device-wrapper:hover {
-    transform: translate3d(200px, 80px, 0) rotateY(160deg) rotateX(-20deg);
+.device-stage.together .device > div {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
-.device-stage.tryit .device > div {
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.device-stage.tryit .device.desktop {
-    transform: rotateY(180deg);
+.device-stage.together .device.desktop {
+  transform: rotateY(180deg);
 }
 
 body.legacy .device-stage {
-    display: none !important;
+  display: none !important;
 }
 
 @media (max-width: 840px) {
-    .device-stage, .section-icon {
-        display: none !important;
-    }
+  .device-stage,
+  .section-icon {
+    display: none !important;
+  }
 
-    section:not(.hero) {
-        height: auto !important;
-    }
+  section:not(.hero) {
+    height: auto !important;
+  }
 
-    section .inner {
-        width: 100%;
-        padding: 0 20px;
-        box-sizing: border-box;
-        align-items: center !important;
-        text-align: center !important;
-    }
+  section .inner {
+    width: 100%;
+    padding: 0 20px;
+    box-sizing: border-box;
+    align-items: center !important;
+    text-align: center !important;
+  }
 
-    section .inner h1, section .inner h2 {
-        width: 100% !important;
-    }
+  section .inner h1,
+  section .inner h2 {
+    width: 100% !important;
+  }
 
-    h1 {
-        font-size: 220%;
-    }
+  h1 {
+    font-size: 220%;
+  }
 }
