--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,30 +1,22 @@
+@keyframes reveal {
+  from {
+    transform: translate(0, 30px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes reveal2 {
+  from {
+    transform: translate(0, 30px);
+  }
+}
+
 html,
 body {
   overflow-x: hidden;
-}
-
-header {
-  position: absolute;
-  background: transparent;
-  border: none;
-  text-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
-}
-
-header,
-header a {
-  color: #fff;
-}
-
-header .inner {
-  max-width: none;
-  padding: 0 10px;
-  box-sizing: border-box;
-}
-
-header.header-background {
-  background: #23b4ff;
-  z-index: 0;
-  height: 50px;
 }
 
 main {
@@ -58,7 +50,7 @@ section:nth-of-type(2n + 1) {
   );
 }
 
-section .inner {
+section > .inner {
   display: flex;
   flex-direction: column;
   justify-content: start;
@@ -79,6 +71,7 @@ section h2 {
 }
 
 .device-stage {
+  z-index: 10;
   transform: translate3d(0, 100px, 0);
 }
 
@@ -105,40 +98,79 @@ section h2 {
 section.hero {
   position: relative;
   padding-top: 0;
-  height: 700px;
+  height: 630px;
+  color: #fff;
+  overflow: visible;
+  text-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
+  z-index: 10;
+}
+
+section.hero::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  z-index: -1;
+  left: -25%;
+  width: 150%;
+  height: 150%;
   background-color: #23b4ff;
   background: linear-gradient(180deg, #59c6ff 0%, #077cb9 100%);
-  color: #fff;
-  overflow: hidden;
-  text-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
+  transform-origin: center center;
+  transform: translate(0, -38%) rotate(-9deg);
+  border-radius: 100%;
+  animation: reveal2 2.5s -1s backwards;
 }
 
 section.hero .inner {
   justify-content: center;
 }
 
+.hero header,
+section.hero .inner > * {
+  animation: reveal 1s backwards;
+}
+
+.hero header {
+  position: absolute;
+  background: transparent;
+  box-shadow: none;
+  border: none;
+  text-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
+}
+
+.hero header .signup-button {
+  background: transparent;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
+}
+
 .hero a {
   color: #fff;
 }
 
-.hero .logo-icon {
-  font-size: 100%;
-  position: relative;
-  top: 5px;
+section.hero .inner .logo {
+  height: 60px;
+  width: 200px;
+  stroke: currentColor;
+  fill: currentColor;
+  stroke-width: 7;
+  margin-bottom: 30px;
+  animation-delay: 0.2s;
 }
 
-.hero h1 {
-  margin-top: -20px;
+section.hero h1 {
+  display: none;
 }
 
-.hero h1,
-.hero h2 {
-  font-weight: 400;
-  width: 460px;
-}
-
-section.hero h2 {
+section.hero .inner h2 {
+  font-weight: 300;
+  width: 420px;
   margin-bottom: 40px;
+  animation-delay: 0.4s;
+}
+
+section.hero .inner h2 strong {
+  font-weight: 700;
 }
 
 .hero .description {
@@ -147,18 +179,19 @@ section.hero h2 {
   font-size: 110%;
 }
 
-.hero .buttons > * {
-  margin-right: 10px;
+section.hero .inner > .buttons {
+  animation-delay: 0.6s;
 }
 
-.hero button,
-.hero .btn {
+.hero .inner button,
+.hero .inner .btn {
   font-size: 110%;
   box-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
 }
 
 .device-stage.hero .device-wrapper {
-  transform: translate3d(250px, 30px, 0) rotateY(-30deg) rotateX(20deg);
+  transform: translate3d(250px, 40px, 0) rotateY(-30deg) rotateX(20deg)
+    scale(1.2);
 }
 
 /* SIMPLE SECTION */
@@ -173,7 +206,7 @@ section.simple .inner > h2 {
 }
 
 .device-stage.simple {
-  transform: translate3d(0, 700px, 0);
+  transform: translate3d(0, 630px, 0);
 }
 
 .device-stage.simple .device-wrapper {
@@ -191,11 +224,12 @@ section.portable .inner > h2 {
 }
 
 .device-stage.portable {
-  transform: translate3d(0, 1150px, 0);
+  z-index: 1;
+  transform: translate3d(0, 1080px, 0);
 }
 
 .device-stage.portable .device-wrapper {
-  transform: translate3d(270px, 60px, 0) rotateY(150deg) rotateX(-20deg);
+  transform: translate3d(250px, 60px, 0) rotateY(150deg) rotateX(-20deg);
 }
 
 .device-stage.portable .device.desktop {
@@ -219,7 +253,8 @@ section.transparent .inner > h2 {
 }
 
 .device-stage.transparent {
-  transform: translate3d(0, 1600px, 0);
+  z-index: 1;
+  transform: translate3d(0, 1530px, 0);
 }
 
 .device-stage.transparent .device-wrapper {
@@ -242,7 +277,8 @@ section.together .inner > h2 {
 }
 
 .device-stage.together {
-  transform: translate3d(0, 2050px, 0);
+  z-index: 1;
+  transform: translate3d(0, 1980px, 0);
 }
 
 .device-stage.together .device-wrapper {
